# web20_Scraping

./: README.md  authors.json  pyproject.toml  scrap.py
quotes_scraper/: main.py
quotes_scraper/quotes_scraper/spiders/: quotes.py
